[gd_scene load_steps=2 format=3 uid="uid://de2g3m02nvnxx"]

[ext_resource type="Script" uid="uid://bn87imfv0ykcy" path="res://resources/components/savegame_area/savegame_area.gd" id="1_43mry"]

[node name="SaveGameArea" type="Area2D"]
script = ExtResource("1_43mry")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
size_2d_override = Vector2i(1, 1)
render_target_update_mode = 4

[node name="Label3D" type="Label3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 1)
font_size = 55
outline_size = 2

[node name="TOP_LEFT" type="Camera3D" parent="SubViewport"]
transform = Transform3D(0.757597, 0.509763, -0.407662, 0.0240133, 0.602366, 0.797859, 0.652281, -0.614245, 0.444109, -1.42234, 2.52941, 2.19962)

[node name="TOP_RIGHT" type="Camera3D" parent="SubViewport"]
transform = Transform3D(0.828555, -0.458566, 0.32127, 0.0240133, 0.602366, 0.797859, -0.559393, -0.653355, 0.510105, 1.42483, 2.52941, 2.19962)
current = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2

[connection signal="body_entered" from="." to="." method="_on_save_game_area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_save_game_area_body_exited"]
